--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Bootstrap Blog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="bootstrap-style.css">
+            <link rel="stylesheet" href="css/bootstrap-style.css">
     </head>
    
     <body>
